--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,11 +1,11 @@
-.movies Footer {
+Footer {
   display: flex;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0);
   border: 5px orange solid;
 }
 
-.movies Footer h2 {
+Footer h2 {
   font-size: 25px;
   margin: 20px 0px;
   color: orange;
