--- a/src/Header.css
+++ b/src/Header.css
@@ -1,9 +1,9 @@
-.movies Header {
+Header {
   display: flex;
   justify-content: center;
 }
 
-.movies Header h1 {
+Header h1 {
   margin-top: 0px;
   margin-bottom: 80px;
   font-size: 100px;
